data/derived/fa15/progs/unify/prog3294.ml.out
Characters 21-34:
  let _ = stringOfList string_of_int [1;2;3;4;5;6];;
                       ^^^^^^^^^^^^^
Error: This expression has type int -> string
       but an expression was expected of type
         (('a -> 'b) -> 'a list -> 'b list) ->
         'c -> (string -> string list -> string) -> string -> 'c -> 'd
       Type int is not compatible with type ('a -> 'b) -> 'a list -> 'b list 
